--- a/index.html
+++ b/index.html
@@ -6,48 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>Instagram Feed Bootstrapped</title>
 </head>
 <body>
-<div>
+<div class="pagetop">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
+                <i class="fab fa-instagram"></i>
                 <a class="navbar-brand" href="#">Instagram</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                        Create a new post
-                        </button>
 
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+
                             <div class="modal-body">
-                                ...
+                                <textarea class="form-control" aria-label="With textarea"></textarea>
+                                <br>
+                            <button type="button" class="btn btn-outline-secondary"><i class="fas fa-camera"></i> </button>
+                            <button type="button" class="btn btn-outline-secondary"><i class="fas fa-map-marker-alt"></i> </button>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                                <button type="button" class="btn btn-primary">Publish</button>
                             </div>
                             </div>
                         </div>
                         </div>
+
+
+
+
+
+
+
+
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">
-                                <a class="btn btn-success">Create a new post</a>
-
-                            </a>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                        Create a new post!
+                        </button>
+                            <a class="nav-link" href="#"></a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -62,10 +67,12 @@
                             </div>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
 </div>
+
 
 
 
